# restaurant_data_elt

./: .env.example  .gitignore  README.md  docker-compose.yml
airflow/: Dockerfile  profiles.yml
airflow/dags/: create_user_snapshot.py  extract_orders_from_api.py
airflow/dags/utils/: config_loader.py  elt_tasks.py
api/: Dockerfile  pyproject.toml
api/app/: fake_db.py  generator.py  main.py  schemas.py
dbt/: dbt_project.yml
dbt/models/staging/: schema.yml  stg_orders.sql
streamlit/: Dockerfile  app.py
